samples/_failures_safe/1761442261_d0e906_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b47492d2.c: In function ‘main’:
./samples/SAFE/__tmp_b47492d2.c:127:20: error: missing terminating " character
  127 |             printf("Error: Matrices must have same dimensions for addition
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b47492d2.c:127:13: error: expected expression at end of input
  127 |             printf("Error: Matrices must have same dimensions for addition
      |             ^~~~~~
./samples/SAFE/__tmp_b47492d2.c:127:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b47492d2.c:127:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b47492d2.c:127:13: error: expected declaration or statement at end of input
